# mantis-moveit2-arm

./: README.md  package.xml
launch/: pick_and_place_project.launch.py
moveit_project/: CMakeLists.txt  package.xml
moveit_project/launch/: pick_and_place_project.launch.py
moveit_project/src/: moveit_node.cpp
src/: moveit_node.cpp
urdf/: mantis.urdf.xacro
