<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_project</name>
  <version>0.0.0</version>
  <description>This package implements a complete, fully autonomous pick and place pipeline using ROS2, 
    MoveIt2, and the MoveIt Task Constructor. Designed for automated multi-block manipulation, it 
    coordinates grasp strategy generation, motion planning, and execution in a unified workflow. The 
    system uses a fully custom robot URDF and provides several predefined scenarios to showcase block 
    manipulation, accurate movement, and precise placement. It highlights the motion planning, grasping, 
    and object placement capabilities.
  </description>
  <maintainer email="galavps@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_task_constructor_core</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
